manifests/base/microservices/queue-master/queue-master-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: queue-master
  annotations:
    prometheus.io/scrape: "true"
  labels:
    name: queue-master
  namespace: sock-shop
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    name: queue-master
