manifests/base/microservices/queue-master/queue-master-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: queue-master-access
  namespace: sock-shop
spec:
  podSelector:
    matchLabels:
      name: queue-master

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              name: shipping
        - podSelector:
            matchLabels:
              name: orders
        - podSelector:
            matchLabels:
              name: rabbitmq
      ports:
        - protocol: TCP
          port: 80
